--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="stop">Stop</string>
     <string name="time">Time</string>
     <string name="lap_time">Lap Time</string>
+    <string name="Pause">Pause</string>
+    <string name="Lap">Lap</string>
+    <string name="Lap">Lap</string>
+    <string name="Lap">Lap</string>
 </resources>
