--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="lap_time">Lap Time</string>
     <string name="Pause">Pause</string>
     <string name="Lap">Lap</string>
+    <string name="clear_lap">Clear Lap</string>
 </resources>
