--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="Pause">Pause</string>
     <string name="Lap">Lap</string>
     <string name="clear_lap">Clear Lap</string>
+    <string name="zero_time">00:00</string>
 </resources>
